# x8

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FAQ.md  README.md  ROADMAP.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
benchmarks/: fib.js  json.js  loop.js  run.sh  strings.js
docs/: COMPARE.md
examples/: README.md  fetch-github.ts  hello.ts  sample.test.ts  worker-pool.ts  worker-task.ts
examples/modules/: main.ts  math.ts
src/: lib.rs  main.rs
