[package]
name = "x8"
version = "2.0.0"
edition = "2021"
description = "A minimal, fast JavaScript runtime written in Rust"
license = "MIT"
repository = "https://github.com/nktkt/x8"
readme = "README.md"
keywords = ["javascript", "runtime", "js", "interpreter"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "x8"
path = "src/lib.rs"

[[bin]]
name = "x8"
path = "src/main.rs"

[dependencies]
boa_engine = "0.20"
rustyline = "14"
tokio = { version = "1", features = ["rt", "macros", "time", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking"] }
oxc_allocator = "0.130"
oxc_codegen = "0.130"
oxc_parser = "0.130"
oxc_span = "0.130"
oxc_transformer = "0.130"
oxc_semantic = "0.130"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
